*) New: If BOTs are recored (IGNOREBOTS option) then the player overview
		has a new option to show those too. Otherwise only non-bots are
		shown.
*) New: Daily awards have a history. The data will be kept as log as
		DELETEDAYS is defined.
*) New: hlstats-screen.sh script to start HLStats within the screen
		command. thx to Schakal
*) New: Russian translation by E][tremist
*) Update: TFC images
*) Update: TFC gamesupport
*) Update: TF2 gamesupport
*) Update: L4D gamesupport
*) Changed: Options moved from conf files into DB, but information
			about DB access is still in those files. Needed to make sure
			the daemon and webinterface can still be apart.
			IMPORTANT: READ THE UPGRADE INFORMATION ABOUT THIS !!
*) Changed: ELO Ratingsystem removed. It was never used..... :(
*) Changed: Only one admin user is now possible. Dropped admin rights
			for now.
*) Changed: Design options removed from options table
*) Changed: imgpaht and imgdir option removed
*) Changed: Host statistics in admin disabled. New version will include
			this again.
*) Changed: Constant INCLUDE_PATH removed.
*) Changed: hlstats.php file renamed to index.php
				scripturl option has been removed.
*) Changed: sorting pictures renamed
*) Changed: replaced AMCharts with pChart
*) Changed: Information about real kills removed
*) Changed: hls_set options cleanup
*) Changed: hlstats.conf.ini DNSResolveIP and DNSTimeout removed.
			Replaced by UseGEOIP
*) Changed: Dropped hlstats_Server defaultMap.
			While loading servers from DB we get the current map via
			ServerQueries. This should avaid "unknown" maps
*) Changed: Dropped MailTo and MailPath setting for daemon.
*) Chnaged: Filters at players overview are applied to chart, too.
*) Fixed: typo in lang (thx to LuBJe)
*) Fixed: bug in admin -> Tools -> Reset (thx to conan)
*) Fixed: remove the ; in rcon commands (thx to Par0noid)
*) Fixed: Issue #23
*) Fixed: Issue #26
*) Fixed: Issue #32
*) Fixed: Issue #31
*) Fixed: Issue #40
*) Fixed: Issue #42